--- a/docker-compose/front-test-app/index.html
+++ b/docker-compose/front-test-app/index.html
@@ -18,6 +18,7 @@
         <button type="button" id="get-clients">Show All Clients</button>
     </div>
     <div id="client-table"></div>
+    <p id="error"></p>
     <script src="./index.js"></script>
 </body>
 </html>
